--- a/public/styles.css
+++ b/public/styles.css
@@ -620,16 +620,8 @@ video {
   bottom: -5rem;
 }
 
-.-left-44 {
-  left: -11rem;
-}
-
 .-right-20 {
   right: -5rem;
-}
-
-.-right-44 {
-  right: -11rem;
 }
 
 .-top-16 {
@@ -640,20 +632,8 @@ video {
   top: -5rem;
 }
 
-.bottom-20 {
-  bottom: 5rem;
-}
-
 .left-\[5\%\] {
   left: 5%;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.-z-10 {
-  z-index: -10;
 }
 
 .z-10 {
@@ -701,16 +681,6 @@ video {
   height: 12rem;
 }
 
-.size-\[400px\] {
-  width: 400px;
-  height: 400px;
-}
-
-.size-\[600px\] {
-  width: 600px;
-  height: 600px;
-}
-
 .h-56 {
   height: 14rem;
 }
@@ -741,16 +711,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-@keyframes pulse {
-  50% {
-    opacity: .5;
-  }
-}
-
-.animate-pulse {
-  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .cursor-pointer {
@@ -852,6 +812,10 @@ video {
   border-bottom-right-radius: 50px;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-r {
   border-right-width: 1px;
 }
@@ -885,14 +849,29 @@ video {
   background-color: rgb(240 244 247 / var(--tw-bg-opacity));
 }
 
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-green-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 46 22 / var(--tw-bg-opacity));
+}
+
+.bg-slate-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
+.bg-slate-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 6 23 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\.\.\/img\/bg2\.jpg\'\)\] {
@@ -943,6 +922,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-32 {
